--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="container ">
       <section class="row">
         <div class="col s12 center">
-          <h2 class="">Carousel</h2>
+          <h2>Carousel</h2>
           <h4>"Desarrollo de carrusel con jQuery y materialize"</h4>
         </div>
       </section>
